--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: svyr2
+Package: svyr
 Type: Package
 Title: Tools for analyzing surveys (Title Case)
 Version: 0.1.0
@@ -20,3 +20,4 @@ Imports:
 License: gpl-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.0
