made some sql functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,13 @@ S3method(choices,svq)
 S3method(choices,svy)
 S3method(labels,svq)
 S3method(labels,svy)
-S3method(names,svy)
 export("group<-")
 export("languages<-")
 export("node<-")
+export(.names.svy)
 export(choices)
 export(class1)
+export(collapse)
 export(copy_atts)
 export(counts)
 export(doSQL)
