bugfixes, googlesheets dependency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,11 @@ S3method(labels,svy)
 export("group<-")
 export("languages<-")
 export("node<-")
-export(.names.svy)
+export(.names)
 export(choices)
 export(class1)
 export(collapse)
+export(connection)
 export(copy_atts)
 export(counts)
 export(doSQL)
@@ -20,7 +21,7 @@ export(drive_download_recursive)
 export(getSQL)
 export(getSchema)
 export(group)
-export(label)
+export(label.svq)
 export(languages)
 export(name)
 export(node)
@@ -30,3 +31,4 @@ export(svy)
 export(type)
 export(types)
 importFrom(tibble,as_tibble)
+importFrom(xtable,label)
