--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,10 +15,14 @@ Imports:
     jsonlite,
     xlsx,
     xml2,
+    xtable,
     plyr,
     dplyr,
     purrr,
+    googlesheets,
     googledrive
+Remotes:
+    github::jennybc/googlesheets
 License: gpl-3
 Encoding: UTF-8
 LazyData: true
