exported kobo functions, made collapse a method.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ S3method("[",svy)
 S3method(as_tibble,odk_data)
 S3method(choices,svq)
 S3method(choices,svy)
+S3method(collapse,svq)
+S3method(label,svq)
 S3method(labels,svq)
 S3method(labels,svy)
 export("group<-")
@@ -12,7 +14,6 @@ export("node<-")
 export(.names)
 export(choices)
 export(class1)
-export(collapse)
 export(connection)
 export(copy_atts)
 export(counts)
@@ -21,7 +22,9 @@ export(drive_download_recursive)
 export(getSQL)
 export(getSchema)
 export(group)
-export(label.svq)
+export(kobo_form)
+export(kobo_ls)
+export(kobo_submit)
 export(languages)
 export(name)
 export(node)
@@ -30,5 +33,6 @@ export(setSchema)
 export(svy)
 export(type)
 export(types)
+importFrom(dplyr,collapse)
 importFrom(tibble,as_tibble)
 importFrom(xtable,label)
