exported kobo_curl, added package name to fromJSON call

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(drive_download_recursive)
 export(getSQL)
 export(getSchema)
 export(group)
+export(kobo_curl)
 export(kobo_form)
 export(kobo_ls)
 export(kobo_submit)
