operators, subsetting, and started postgres integration.  documentation.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     dplyr,
     purrr,
     googlesheets,
-    googledrive
+    googledrive,
+    RPostgres
 Remotes:
     github::jennybc/googlesheets
 License: gpl-3
