--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,9 +17,12 @@ S3method(print,svy)
 S3method(str,svq)
 S3method(str,svy)
 S3method(summary,svq)
+export("%%")
+export("%*%")
 export("group<-")
 export("node<-")
 export(all_names)
+export(as_uuid)
 export(choices)
 export(class1)
 export(connection)
