--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,9 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 Depends: 
     R (>= 3.1.0),
+    plyr,
     magrittr,
-    plyr
+    tidyverse
 Imports:
     curl,
     Hmisc,
