--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(languages)
 export(name)
 export(node)
 export(preserve)
+export(preservingly)
 export(setSchema)
 export(svy)
 export(type)
