--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export("group<-")
 export("node<-")
 export(all_names)
 export(as_uuid)
+export(bind_rows)
 export(choices)
 export(class1)
 export(connection)
