--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(choices,svq)
 S3method(choices,svy)
 S3method(collapse,svq)
 S3method(label,svq)
+S3method(labelize,default)
 S3method(labelize,svq)
 S3method(labelize,svy)
 S3method(labels,svq)
@@ -19,6 +20,7 @@ export("group<-")
 export("node<-")
 export(all_names)
 export(as_uuid)
+export(bind_cols.svy)
 export(bind_rows)
 export(choices)
 export(class1)
@@ -42,10 +44,14 @@ export(name)
 export(node)
 export(preserve)
 export(preservingly)
+export(protectively)
 export(setSchema)
+export(svq)
 export(svy)
 export(type)
 export(types)
+import(magrittr)
+import(tidyverse)
 importFrom(dplyr,collapse)
 importFrom(tibble,as_tibble)
 importFrom(xtable,label)
